fix: add padding-top to #main and position #header next to sidebar
- Added padding-top: 70px to #main to prevent post-title from being hidden behind fixed header
- Moved #header to left: 250px with width: calc(100% - 250px) so it starts at sidebar edge
- Updated .header-title margin-left from 250px to 0 since parent container is now offset

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -237,9 +237,15 @@
         width: auto !important;
         transform: none !important;
         background-color: #fff !important;
+        padding-top: 70px !important; /* Space for fixed header */
+      }
+      /* Move header to right of sidebar */
+      #header {
+        left: 250px !important;
+        width: calc(100% - 250px) !important;
       }
       .header-title, #bottom-bar {
-        margin-left: 250px !important;
+        margin-left: 0 !important;
         margin-right: 0 !important;
         width: auto !important;
         transform: none !important;
